--- a/source/layouts/main.twig
+++ b/source/layouts/main.twig
@@ -23,6 +23,7 @@
 	<body>
 		<div class="page">
 			{% block header %}
+				{% include 'components/firstscreen.twig' with promo|merge({ bemMix: 'page__firstscreen' }) %}
 			{% endblock %}
 
 			<main>
