--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,3 +3,11 @@
   grid-template-rows: min-content 1fr min-content;
   min-height: 100vh;
 }
+
+.page__firstscreen {
+  box-shadow: $base-shadow;
+
+  @include vp-1023 {
+    box-shadow: none;
+  }
+}
