--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,9 @@
 
 // Blocks
 @import "blocks/btn";
+@import "blocks/firstscreen";
+@import "blocks/logo";
+@import "blocks/nav";
 @import "blocks/page";
 @import "blocks/page-footer";
 @import "blocks/page-header";
