--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,111 @@
 .page-header {
+  position: relative;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
+  align-content: flex-start;
+  padding: 34px 0;
+
+  @include vp-1023 {
+    padding: 21px 0 20px;
+  }
+
+  @include vp-767 {
+    right: -15px;
+    left: -15px;
+    width: calc(100% + 30px);
+    padding: 20px 15px;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      right: 100%;
+      bottom: 0;
+      width: 100vw;
+      background-color: rgba($color-prussian-blue, 0.5);
+      pointer-events: none;
+    }
+  }
+}
+
+.page-header__toggler {
+  display: none;
+  padding: 0;
+  color: inherit;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+
+  @include default-interactive;
+
+  &::before {
+    content: "";
+    width: 25px;
+    height: 22px;
+    background-color: currentColor;
+
+    @include mask("icon-hamburger");
+  }
+
+  @include vp-767 {
+    display: flex;
+  }
+}
+
+.page-header__nav {
+  @include vp-767 {
+    display: none;
+    width: 100%;
+    margin-top: 32px;
+  }
+}
+
+.page-header__nav-list {
+  justify-content: flex-end;
+  margin: 0;
+}
+
+.page-header.is-active {
+  @include vp-767 {
+    &::before {
+      content: "";
+    }
+  }
+}
+
+.page-header.no-js:hover,
+.page-header.no-js:focus-within {
+  .page-header__toggler {
+    display: none;
+  }
+}
+
+.page-header.no-js:hover,
+.page-header.no-js:focus-within,
+.page-header.is-active {
+  @include vp-767 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: auto;
+    z-index: 1;
+    align-items: flex-start;
+    width: 285px;
+    color: $color-tangaroa;
+    background-color: $color-alice-blue-light;
+    transition: color $trans-default, background-color $trans-default;
+
+    .page-header__toggler::before {
+      width: 13px;
+      margin-left: auto;
+
+      @include mask("icon-close");
+    }
+
+    .page-header__nav {
+      display: block;
+    }
+  }
 }
