--- a/source/sass/blocks/firstscreen.scss
+++ b/source/sass/blocks/firstscreen.scss
@@ -1,7 +1,7 @@
 .firstscreen {
   @include background-image;
 
-  color: $color-alice-blue-light;
+  color: $color-alice-blue;
   background-color: $color-tangaroa;
   background-position: 50% 100%;
   background-size: cover;
