--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -94,7 +94,7 @@
     align-items: flex-start;
     width: 285px;
     color: $color-tangaroa;
-    background-color: $color-alice-blue-light;
+    background-color: $color-alice-blue;
     transition: color $trans-default, background-color $trans-default;
 
     .page-header__toggler::before {
