--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -35,7 +35,7 @@
   font-family: $ff-montserrat;
   text-transform: uppercase;
   text-align: center;
-  color: $color-alice-blue-light;
+  color: $color-alice-blue;
   background-color: transparent;
   border-radius: 3px;
   cursor: pointer;
