--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -23,6 +23,8 @@ html {
   // если по прежнему есть проблемы с выравниванием
   // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
   color: $color-tangaroa;
+
+  @include custom-scrollbar(currentColor, $color-link-water);
 }
 
 body {
