--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,9 @@
 
 // Blocks
 @import "blocks/btn";
+@import "blocks/content";
 @import "blocks/firstscreen";
+@import "blocks/list";
 @import "blocks/logo";
 @import "blocks/nav";
 @import "blocks/page";
