--- a/source/layouts/modules/macro.twig
+++ b/source/layouts/modules/macro.twig
@@ -1,7 +1,10 @@
-{% macro background(imageset) -%}
+{% macro background(imageset, color = null) -%}
 	style="
 		{%- for key, value in imageset -%}
 			--bg-{{ key }}: url('../{{ value }}');
 		{%- endfor -%}
+		{%- if color -%}
+			--bg-color: {{ color }};
+		{%- endif -%}
 	"
 {%- endmacro %}
