--- a/source/sass/blocks/firstscreen.scss
+++ b/source/sass/blocks/firstscreen.scss
@@ -30,6 +30,7 @@
   @include vp-1023 {
     min-height: 560px;
     padding: 64px 0 150px;
+    text-shadow: none;
   }
 
   @include vp-767 {
@@ -65,6 +66,7 @@
     }
 
     @include vp-767 {
+      font-size: 16px;
       margin-right: 30px;
     }
   }
