--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,7 +7,7 @@ $color-transparent: rgba($color-default-white, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/011c40
 $color-tangaroa: #011c40;
 $color-prussian-blue: #002b66;
-$color-link-water: #cad2df;
+$color-solitude: #e3ecf6;
 $color-alice-blue: #f9fbfd;
 
 // Gradient
