--- a/css/style.css
+++ b/css/style.css
@@ -436,18 +436,18 @@ html {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   color: #011c40;
-  scrollbar-color: currentColor #cad2df;
+  scrollbar-color: currentColor #e3ecf6;
   scrollbar-width: thin;
 }
 
 html::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background-color: #cad2df;
+  background-color: #e3ecf6;
 }
 
 html::-webkit-scrollbar-track {
-  background-color: #cad2df;
+  background-color: #e3ecf6;
   border: 3px solid #f9fbfd;
 }
 
@@ -621,6 +621,29 @@ input[type=number]::-webkit-inner-spin-button {
   }
 }
 
+.content {
+  padding: 120px 0;
+}
+
+.content h2 {
+  margin: -4px 0 24px;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 42px;
+}
+
+.content p {
+  margin: 0;
+}
+
+.content__inner {
+  display: grid;
+  grid-template-columns: 1fr 560px;
+  gap: 64px;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
 .firstscreen {
   color: #f9fbfd;
   background-color: #011c40;
@@ -697,6 +720,103 @@ input[type=number]::-webkit-inner-spin-button {
   margin: 0;
   font-size: 20px;
   line-height: 24px;
+}
+
+.list {
+  background-color: var(--bg-color, transparent);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 120px 0;
+}
+
+@supports (background-image: var(--bg-webp)) {
+  .list {
+    background-image: var(--bg-webp);
+  }
+
+@media (max-width: 1023px) {
+    .list {
+      background-image: var(--bg-webpTablet);
+    }
+}
+
+@media (max-width: 767px) {
+    .list {
+      background-image: var(--bg-webpMobile);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .list {
+      background-image: var(--bg-webp2x);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 1023px), (min-resolution: 144dpi) and (max-width: 1023px), (min-resolution: 1.5dppx) and (max-width: 1023px) {
+    .list {
+      background-image: var(--bg-webpTablet2x);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 767px), (min-resolution: 144dpi) and (max-width: 767px), (min-resolution: 1.5dppx) and (max-width: 767px) {
+    .list {
+      background-image: var(--bg-webpMobile2x);
+    }
+}
+}
+
+@supports not (background-image: var(--bg-webp)) {
+  .list {
+    background-image: var(--bg-default);
+  }
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .list {
+      background-image: var(--bg-default2x);
+    }
+}
+}
+
+.list__heading {
+  margin: -10px 0 48px;
+  font-weight: 600;
+  font-size: 28px;
+  text-align: center;
+}
+
+.list__items {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.list__item {
+  padding: 30px;
+  background-color: #f9fbfd;
+}
+
+.list__item::before {
+  content: "";
+  display: block;
+  width: 44px;
+  height: 32px;
+  margin: 0 0 18px;
+  background-image: var(--icon);
+}
+
+.list__item h3 {
+  margin: 0 0 9px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.list__item p {
+  margin: 0 0 15px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 .logo {
@@ -859,9 +979,28 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 @media (max-width: 1023px) {
+  .content {
+    padding: 100px 0;
+  }
+
+  .content h2 {
+    margin: -9px 0 15px;
+    font-size: 26px;
+    line-height: 36px;
+  }
+
+  .content__inner {
+    grid-template-columns: 1fr 324px;
+    align-items: start;
+    gap: 25px;
+    margin-bottom: -5px;
+    padding-right: 50px;
+  }
+
   .firstscreen__promo {
     min-height: 560px;
     padding: 64px 0 150px;
+    text-shadow: none;
   }
 
   .firstscreen__promo h1 {
@@ -872,6 +1011,37 @@ input[type=number]::-webkit-inner-spin-button {
   .firstscreen__promo p {
     font-size: 18px;
     line-height: 22px;
+  }
+
+  .list {
+    padding: 100px 0;
+  }
+
+  .list__heading {
+    margin: -12px 0 50px;
+    font-size: 26px;
+  }
+
+  .list__items {
+    gap: 30px;
+  }
+
+  .list__item {
+    padding: 26px 20px 20px;
+  }
+
+  .list__item::before {
+    width: 36px;
+    height: 26px;
+  }
+
+  .list__item h3 {
+    margin: 0 -5px 10px 0;
+    line-height: 25px;
+  }
+
+  .list__item p {
+    margin-bottom: 0;
   }
 
   .logo {
@@ -902,6 +1072,22 @@ input[type=number]::-webkit-inner-spin-button {
     padding: 0 15px;
   }
 
+  .content {
+    padding: 65px 0;
+  }
+
+  .content h2 {
+    margin-top: -8px;
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  .content__inner {
+    grid-template-columns: 1fr;
+    gap: 43px;
+    margin-bottom: 20px;
+  }
+
   .firstscreen .no-js:hover + .firstscreen__promo,
   .firstscreen .no-js:focus-within + .firstscreen__promo,
   .firstscreen .is-active + .firstscreen__promo {
@@ -920,7 +1106,25 @@ input[type=number]::-webkit-inner-spin-button {
   }
 
   .firstscreen__promo p {
+    font-size: 16px;
     margin-right: 30px;
+  }
+
+  .list {
+    padding: 65px 0;
+  }
+
+  .list__heading {
+    margin: -8px 0 30px;
+    font-size: 24px;
+  }
+
+  .list__items {
+    grid-template-columns: 1fr;
+  }
+
+  .list__item h3 {
+    margin: 0 34px 10px 0;
   }
 
   .logo {
