--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -1,3 +1,15 @@
 .btn {
-  @include btn;
+  padding: 9px 20px 10px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.5;
+  font-family: $ff-montserrat;
+  text-align: center;
+  color: $color-tangaroa;
+  background-color: $color-alice-blue;
+  border-radius: 0;
+  cursor: pointer;
+  user-select: none;
+
+  @include default-interactive;
 }
