--- a/source/layouts/pages/index.twig
+++ b/source/layouts/pages/index.twig
@@ -4,4 +4,6 @@
 	{% include '../components/content.twig' with about %}
 
 	{% include '../components/list.twig' with advantages %}
+
+	{% include '../components/cards.twig' with offers %}
 {% endblock %}
