--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 
 // Blocks
 @import "blocks/btn";
+@import "blocks/cards";
 @import "blocks/content";
 @import "blocks/firstscreen";
 @import "blocks/list";
