--- a/css/style.css
+++ b/css/style.css
@@ -493,13 +493,13 @@ textarea {
 input::-moz-placeholder,
 textarea::-moz-placeholder {
   color: inherit;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 input::placeholder,
 textarea::placeholder {
   color: inherit;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 input:invalid,
@@ -604,6 +604,7 @@ input[type=number]::-webkit-inner-spin-button {
   text-align: center;
   color: #011c40;
   background-color: #f9fbfd;
+  border: none;
   border-radius: 0;
   cursor: pointer;
   -webkit-user-select: none;
@@ -840,6 +841,193 @@ input[type=number]::-webkit-inner-spin-button {
   margin: 0;
   font-size: 20px;
   line-height: 24px;
+}
+
+.form {
+  padding: 50px;
+  color: #f9fbfd;
+  background-color: #011c40;
+}
+
+.form__description {
+  margin: -7px 0 28px;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.form__group {
+  margin: 0 0 20px;
+}
+
+.form__group input:not([type=checkbox]) {
+  width: 100%;
+  padding: 13px 16px 12px;
+  font-size: 14px;
+  font-family: inherit;
+  color: #011c40;
+  background-color: #f9fbfd;
+  border: none;
+  transition: opacity 0.3s ease;
+}
+
+.form__group input:not([type=checkbox]):focus-visible {
+  opacity: 0.8;
+}
+
+@supports not selector(:focus-visible) {
+  .form__group input:not([type=checkbox]).focus-visible:focus {
+    opacity: 0.8;
+  }
+}
+
+.form__group [type=checkbox] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: flex;
+  flex-shrink: 0;
+  width: 18px;
+  height: 18px;
+  color: #011c40;
+  background-color: #f9fbfd;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
+.form__group [type=checkbox]:checked::before {
+  content: "";
+  margin: auto;
+  width: 12px;
+  height: 8px;
+  background-color: #011c40;
+  -webkit-mask: url("../img/sprite.svg#icon-check") no-repeat center/100%;
+  mask: url("../img/sprite.svg#icon-check") no-repeat center/100%;
+}
+
+.form__group label {
+  display: flex;
+  align-items: center;
+  font-size: 10px;
+  line-height: 13px;
+  cursor: pointer;
+  transition: opacity 0.3s ease;
+}
+
+.form__group label:focus-visible {
+  opacity: 0.8;
+}
+
+@supports not selector(:focus-visible) {
+  .form__group label.focus-visible:focus {
+    opacity: 0.8;
+  }
+}
+
+.form__group label [type=checkbox] {
+  margin-right: 5px;
+}
+
+.form__group label[for] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+}
+
+.form__btn {
+  width: 100%;
+  min-height: 43px;
+  margin-top: 10px;
+}
+
+.form-section {
+  background-color: var(--bg-color, transparent);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 50px 0;
+}
+
+@supports (background-image: var(--bg-webp)) {
+  .form-section {
+    background-image: var(--bg-webp);
+  }
+
+@media (max-width: 1023px) {
+    .form-section {
+      background-image: var(--bg-webpTablet);
+    }
+}
+
+@media (max-width: 767px) {
+    .form-section {
+      background-image: var(--bg-webpMobile);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .form-section {
+      background-image: var(--bg-webp2x);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 1023px), (min-resolution: 144dpi) and (max-width: 1023px), (min-resolution: 1.5dppx) and (max-width: 1023px) {
+    .form-section {
+      background-image: var(--bg-webpTablet2x);
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1.5) and (max-width: 767px), (min-resolution: 144dpi) and (max-width: 767px), (min-resolution: 1.5dppx) and (max-width: 767px) {
+    .form-section {
+      background-image: var(--bg-webpMobile2x);
+    }
+}
+}
+
+@supports not (background-image: var(--bg-webp)) {
+  .form-section {
+    background-image: var(--bg-default);
+  }
+
+@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .form-section {
+      background-image: var(--bg-default2x);
+    }
+}
+}
+
+.form-section__inner {
+  display: grid;
+  grid-template-columns: 1fr 403px;
+  gap: 50px;
+  align-items: center;
+  padding-right: 105px;
+  padding-left: 105px;
+}
+
+.form-section__content h2 {
+  margin: -8px 0 8px;
+  font-weight: 700;
+  font-size: 40px;
+}
+
+.form-section__content p {
+  margin: 0;
+  font-size: 18px;
+}
+
+.form-section__form {
+  max-width: 403px;
+  margin: 0 auto;
+  box-shadow: 0 4px 45px rgba(1, 28, 64, 0.15);
 }
 
 .list {
@@ -1165,6 +1353,24 @@ input[type=number]::-webkit-inner-spin-button {
     line-height: 22px;
   }
 
+  .form-section {
+    padding: 100px 0;
+  }
+
+  .form-section__inner {
+    grid-template-columns: 1fr;
+    gap: 53px;
+  }
+
+  .form-section__content {
+    text-align: center;
+  }
+
+  .form-section__content h2 {
+    margin: -12px 0 5px;
+    font-size: 34px;
+  }
+
   .list {
     padding: 100px 0;
   }
@@ -1284,6 +1490,53 @@ input[type=number]::-webkit-inner-spin-button {
     margin-right: 30px;
   }
 
+  .form {
+    padding: 34px 30px 40px;
+  }
+
+  .form__description {
+    margin: 0 0 29px;
+    line-height: 25px;
+    text-align: center;
+  }
+
+  .form__group [type=checkbox] {
+    width: 20px;
+    height: 20px;
+  }
+
+  .form__group label {
+    margin-top: -2px;
+    line-height: 12px;
+  }
+
+  .form__group label [type=checkbox] {
+    margin-right: 8px;
+  }
+
+  .form__btn {
+    margin-top: 8px;
+  }
+
+  .form-section {
+    padding: 65px 0;
+  }
+
+  .form-section__inner {
+    gap: 34px;
+  }
+
+  .form-section__content h2 {
+    margin: -7px 0 14px;
+    font-size: 24px;
+    line-height: 31px;
+  }
+
+  .form-section__content p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+
   .list {
     padding: 65px 0;
   }
@@ -1381,6 +1634,7 @@ input[type=number]::-webkit-inner-spin-button {
 @media (max-width: 599px) {
   .cards__items {
     grid-template-columns: minmax(270px, 309px);
+    padding: 0 10px;
   }
 }
 
@@ -1393,6 +1647,22 @@ input[type=number]::-webkit-inner-spin-button {
   .btn:active,
   .btn:hover:active,
   .btn.focus-visible:active {
+    opacity: 0.5;
+  }
+
+  .form__group input:not([type=checkbox]):hover,
+  .form__group input:not([type=checkbox]):hover:not(.focus-visible) {
+    opacity: 0.8;
+  }
+
+  .form__group label:hover,
+  .form__group label:hover:not(.focus-visible) {
+    opacity: 0.8;
+  }
+
+  .form__group label:active,
+  .form__group label:hover:active,
+  .form__group label.focus-visible:active {
     opacity: 0.5;
   }
 
