--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -7,6 +7,7 @@
   text-align: center;
   color: $color-tangaroa;
   background-color: $color-alice-blue;
+  border: none;
   border-radius: 0;
   cursor: pointer;
   user-select: none;
