--- a/css/style.css
+++ b/css/style.css
@@ -908,6 +908,7 @@ input[type=number]::-webkit-inner-spin-button {
 
 .form__group label {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   font-size: 10px;
   line-height: 13px;
@@ -941,6 +942,19 @@ input[type=number]::-webkit-inner-spin-button {
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(100%);
   clip-path: inset(100%);
+}
+
+.form__group [name] ~ strong {
+  display: none;
+  width: 100%;
+  margin: 5px 0 0;
+  font-weight: inherit;
+  font-size: 12px;
+  color: #ff6982;
+}
+
+.form__group.is-validable :invalid ~ strong {
+  display: block;
 }
 
 .form__btn {
