--- a/source/layouts/pages/index.twig
+++ b/source/layouts/pages/index.twig
@@ -6,4 +6,6 @@
 	{% include '../components/list.twig' with advantages %}
 
 	{% include '../components/cards.twig' with offers %}
+
+	{% include '../components/form-section.twig' with order %}
 {% endblock %}
