--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,10 +5,11 @@ $color-transparent: rgba($color-default-white, 0);
 
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/011c40
-$color-tangaroa: #011c40;
+$color-alice-blue: #f9fbfd;
+$color-brink-pink: #ff6982;
 $color-prussian-blue: #002b66;
 $color-solitude: #e3ecf6;
-$color-alice-blue: #f9fbfd;
+$color-tangaroa: #011c40;
 
 // Gradient
 
