--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,8 @@
 @import "blocks/cards";
 @import "blocks/content";
 @import "blocks/firstscreen";
+@import "blocks/form";
+@import "blocks/form-section";
 @import "blocks/list";
 @import "blocks/logo";
 @import "blocks/nav";
