--- a/css/style.css
+++ b/css/style.css
@@ -768,6 +768,20 @@ input[type=number]::-webkit-inner-spin-button {
   font-size: 18px;
 }
 
+.content a {
+  transition: opacity 0.3s ease;
+}
+
+.content a:focus-visible {
+  opacity: 0.8;
+}
+
+@supports not selector(:focus-visible) {
+  .content a.focus-visible:focus {
+    opacity: 0.8;
+  }
+}
+
 .content--headless h2 {
   position: absolute;
   width: 1px;
@@ -1757,6 +1771,22 @@ input[type=number]::-webkit-inner-spin-button {
   .btn:hover:active,
   .btn.focus-visible:active {
     opacity: 0.5;
+  }
+
+  .content a:hover,
+  .content a:hover:not(.focus-visible) {
+    opacity: 0.8;
+  }
+
+  .content a:active,
+  .content a:hover:active,
+  .content a.focus-visible:active {
+    opacity: 0.5;
+  }
+
+  .content a:hover,
+  .content a:hover:not(.focus-visible) {
+    text-decoration: underline;
   }
 
   .form__group input:not([type=checkbox]):hover,
