--- a/source/layouts/pages/index.twig
+++ b/source/layouts/pages/index.twig
@@ -8,4 +8,6 @@
 	{% include '../components/cards.twig' with offers %}
 
 	{% include '../components/form-section.twig' with order %}
+
+	{% include '../components/content.twig' with contacts %}
 {% endblock %}
