--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,27 +1,46 @@
 .socials {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 30px);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
   padding: 0;
   list-style: none;
 }
 
 .socials__link {
   display: block;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  margin-left: 7px;
   transition: opacity $trans-default;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 20px;
 
   @include default-interactive;
 
+  @include vp-1023 {
+    margin-left: -1px;
+    background-size: 16px;
+  }
+
+  &--narrow {
+    width: 32px;
+    background-size: 12px 20px;
+
+    @include vp-1023 {
+      background-size: 10px 16px;
+    }
+  }
+
   &--ok {
-    background-image: url("../img/sprite.svg#social-ok");
+    background-image: url("../img/sprite.svg#icon-ok");
   }
 
-  &--vk {
-    background-image: url("../img/sprite.svg#social-vk");
+  &--dzen {
+    background-image: url("../img/sprite.svg#icon-dzen");
   }
 
-  &--pinterest {
-    background-image: url("../img/sprite.svg#social-pinterest");
+  &--reddit {
+    background-image: url("../img/sprite.svg#icon-reddit");
   }
 }
