--- a/source/layouts/modules/scripts.twig
+++ b/source/layouts/modules/scripts.twig
@@ -7,12 +7,12 @@
 
 {% if isDev and page == 'index' %}
 	<script>
-		window.pinegladePP = {
+		window.pixelperfect = {
 			breakpoints: [
 			320, 768, 1366
 			],
 			ext: 'webp'
 		};
 	</script>
-	<script src="https://efiand.github.io/pineglade-pp/pineglade-pp.min.js"></script>
+	<script src="https://efiand.github.io/pixelperfect/pixelperfect.min.js"></script>
 {% endif %}
