--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -5,6 +5,7 @@
   line-height: 1.5;
   font-family: $ff-montserrat;
   text-align: center;
+  overflow-wrap: anywhere;
   color: $color-tangaroa;
   background-color: $color-alice-blue;
   border: none;
