--- a/css/style.css
+++ b/css/style.css
@@ -602,6 +602,7 @@ input[type=number]::-webkit-inner-spin-button {
   line-height: 1.5;
   font-family: "Montserrat", "Arial", sans-serif;
   text-align: center;
+  overflow-wrap: anywhere;
   color: #011c40;
   background-color: #f9fbfd;
   border: none;
