--- a/css/style.css
+++ b/css/style.css
@@ -1823,6 +1823,7 @@ input[type=number]::-webkit-inner-spin-button {
     z-index: 1;
     align-items: flex-start;
     width: 285px;
+    overflow-y: auto;
     color: #011c40;
     background-color: #f9fbfd;
     transition: color 0.3s ease, background-color 0.3s ease;
