--- a/source/layouts/components/firstscreen.twig
+++ b/source/layouts/components/firstscreen.twig
@@ -1,4 +1,4 @@
-<div class="firstscreen {{ bemMix }}" {{ mixin.background(image) }}>
+<div class="firstscreen {{ bemMix }}" {{ mixin.background(image, null, true) }}>
 	<div class="container">
 		{% include 'page-header.twig' with { bemMix: 'firstscreen__header' } %}
 
