--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -36,35 +36,35 @@
 }
 
 @mixin background-image() {
-  @supports (background-image: var(--bg-webp)) {
-    background-image: var(--bg-webp);
+  @supports (background-image: var(--bg-webp, none)) {
+    background-image: var(--bg-webp, none);
 
     @include vp-1023 {
-      background-image: var(--bg-webpTablet);
+      background-image: var(--bg-webpTablet, none);
     }
 
     @include vp-767 {
-      background-image: var(--bg-webpMobile);
+      background-image: var(--bg-webpMobile, none);
     }
 
     @include retina {
-      background-image: var(--bg-webp2x);
+      background-image: var(--bg-webp2x, none);
 
       @include vp-1023 {
-        background-image: var(--bg-webpTablet2x);
+        background-image: var(--bg-webpTablet2x, none);
       }
 
       @include vp-767 {
-        background-image: var(--bg-webpMobile2x);
+        background-image: var(--bg-webpMobile2x, none);
       }
     }
   }
 
-  @supports not (background-image: var(--bg-webp)) {
-    background-image: var(--bg-default);
+  @supports not (background-image: var(--bg-webp, none)) {
+    background-image: var(--bg-default, none);
 
     @include retina {
-      background-image: var(--bg-default2x);
+      background-image: var(--bg-default2x, none);
     }
   }
 }
