Правки по критериям код-ревью

--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -116,11 +116,11 @@
     height: 100%;
     object-fit: cover;
   }
+}
 
-  &.is-ready {
-    img {
-      display: none;
-    }
+.content__map.is-ready {
+  img {
+    display: none;
   }
 }
 
